' Generated by UML Generator
' Encoded: hLLDJzmm4BtdL_YOxMuak4Oj0h4W8RNLgd137Bos5KOadfNjS2ZblzVnHx1ZFWvmMMdVp7ipVZDsJhMXoen3N-a7a0Ugw41OJxK-CqR1VZJYYg6yXh-275Ntm0LXe5WlgifbaVCUX3I2F5M4D1A7lH8jkRPKsKq8GwK4fWW79HW3b2dOs9zraAfpbGt9DJQaK5XDx4wOtuvOhnBbjPxXNDOcFIBmm3nt9GfcWFC6SkOsDbEGNo9bmoyI1ZsKq9-Zjpl1WQEtbdbpscZuX1qKyf4Pr2tv2TfytuN_9suMuo0KUecMW3GJ-6IdRO0zMq-beHoLZskNG7wGutaOFb0loqQhuwnMQKFEiX0eY9bhiLCz2HIzkracxKz9_W1hsYdHKHMpwsX1IoAK56AqPsDFrGqQsayY7CTzxpeTK1j5rH-XRHqtEqUorjFz5666X1a4sRSM_6172vX81_jYWyjbplC_lxaxfvSVJi_mebffZS-x1BaqwDsz38VRGWVMMM-DeGELk1MQKTNHud8lE1_uiY6loqM_Rh9euTiY_8RM5xjn2HfOlArslSI5V7ndCtpwXpwKIlCLd2F5z9FGA_mlElSl2jATTZs_AeE5QkknZjctTydD2i_PjwQPtum0eOMYBzLokvhctqaP3MxdmLCXkVsK_GS
' URL: http://www.plantuml.com/plantuml/uml/hLLDJzmm4BtdL_YOxMuak4Oj0h4W8RNLgd137Bos5KOadfNjS2ZblzVnHx1ZFWvmMMdVp7ipVZDsJhMXoen3N-a7a0Ugw41OJxK-CqR1VZJYYg6yXh-275Ntm0LXe5WlgifbaVCUX3I2F5M4D1A7lH8jkRPKsKq8GwK4fWW79HW3b2dOs9zraAfpbGt9DJQaK5XDx4wOtuvOhnBbjPxXNDOcFIBmm3nt9GfcWFC6SkOsDbEGNo9bmoyI1ZsKq9-Zjpl1WQEtbdbpscZuX1qKyf4Pr2tv2TfytuN_9suMuo0KUecMW3GJ-6IdRO0zMq-beHoLZskNG7wGutaOFb0loqQhuwnMQKFEiX0eY9bhiLCz2HIzkracxKz9_W1hsYdHKHMpwsX1IoAK56AqPsDFrGqQsayY7CTzxpeTK1j5rH-XRHqtEqUorjFz5666X1a4sRSM_6172vX81_jYWyjbplC_lxaxfvSVJi_mebffZS-x1BaqwDsz38VRGWVMMM-DeGELk1MQKTNHud8lE1_uiY6loqM_Rh9euTiY_8RM5xjn2HfOlArslSI5V7ndCtpwXpwKIlCLd2F5z9FGA_mlElSl2jATTZs_AeE5QkknZjctTydD2i_PjwQPtum0eOMYBzLokvhctqaP3MxdmLCXkVsK_GS
' Generated on: 2025-11-30T14:49:51.513291500

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -nombre: String
  -correo: String
  -direccion: String
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getCorreo(): String
  +setCorreo(correo: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +toString(): String
}

class Pedido {
  -cliente: Cliente
  -productos: List<Producto>
  -numeroPedido: int
  -{static} contadorPedidos: int = 1
  --
  +Pedido(cliente: Cliente)
  +getCliente(): Cliente
  +setCliente(cliente: Cliente): void
  +getProductos(): List<Producto>
  +getNumeroPedido(): int
  +agregarProducto(producto: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

abstract class Producto {
  -nombre: String
  -precio: double
  --
  +Producto(nombre: String, precio: double)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoDigital {
  -tamanoDescarga: String
  --
  +ProductoDigital(nombre: String, precio: double, tamanoDescarga: String)
  +getTamanoDescarga(): String
  +setTamanoDescarga(tamanoDescarga: String): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml